--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -1,3 +1,41 @@
-a{
-  text-decoration: none;
+.navbar{
+  padding: 0.5rem 5rem;
+}
+.title-movie{
+  font-size: 18px;
+  font-weight: bold;
+}
+.card-img-top{
+  height: 350px;
+}
+p.child-title{
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.rating{
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffc107 !important;
+  padding: .5rem 1rem;
+  font-weight: bold;
+  border-radius: 5px;
+
+  & .left{
+    margin-top: .3rem;
+  }
+
+  & span{
+    padding-top: 5px;
+  }
+
+  & .name-rate{
+    font-weight: bold;
+    margin-right: 1.5rem;
+  }
+}
+
+.no-rate{
+  border: 1px solid rgba($color: #000000, $alpha: .1);
+  border-radius: 2px;
+  padding: 3rem;
 }
